fix alignment in card / adjust navbar

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,5 @@
 .container {
   min-height: 100vh;
-  margin: 0 10px;
 
   @media (min-width: 768px) {
     margin: 0 auto;
