--- a/src/components/common/navbar/navbar.scss
+++ b/src/components/common/navbar/navbar.scss
@@ -6,10 +6,13 @@
   position: relative;
   bottom: 0;
   width: 100%;
+  height: 50px;
   font-family: "Quattrocento", cursive;
+  display: flex;
+  justify-content: center;
 
   @media (min-width: 768px) {
-    // bottom: -135px;
+    height: initial;
     bottom: -20vh;
   }
 }
@@ -23,6 +26,12 @@
   text-decoration: none;
   font-size: 17px;
   transition: 0.5s;
+  margin-top: 5px;
+
+  @media (min-width: 768px) {
+    height: initial;
+    margin-top: 0;
+  }
 }
 
 .navbar span {
