--- a/src/components/oil-result/oils.scss
+++ b/src/components/oil-result/oils.scss
@@ -34,7 +34,7 @@
       height: 120px;
       text-decoration: none;
       border: 1px solid #ccc;
-      border-left: 4px solid #94c093;
+      border-left: 3px solid #94c093;
       border-top: 0;
       border-radius: 7px;
       vertical-align: top;
@@ -67,7 +67,7 @@
       overflow: hidden;
 
       .tile-image {
-        // margin: 0 1px;
+        margin-right: 8px;
         width: 22%;
         height: 120px;
 
@@ -82,6 +82,9 @@
 
       .tile-desc {
         flex: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         .title {
           color: #253340;
@@ -90,7 +93,7 @@
           font-weight: bold;
           text-align: left;
           text-decoration: none;
-          padding: 5px 0 15px 15px;
+          padding: 0 0 15px 0;
           width: 100%;
         }
 
@@ -98,9 +101,9 @@
           color: #6a747e;
           font-size: 0.75em;
           text-align: left;
-          margin: 0 auto;
           line-height: 1;
           width: 250px;
+          height: 35px;
           overflow: hidden;
           display: -webkit-box;
           -webkit-line-clamp: 3;
@@ -109,9 +112,7 @@
           @media (min-width: 768px) {
             line-height: 140%;
             font-size: 0.9em;
-            padding: 15px;
-            margin: 0;
-            height: 75px;
+            height: 60px;
           }
         }
       }
