--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -9,10 +9,10 @@
     margin: 0 150px 100px 150px;
 
     @media screen and (min-width: 600px) and (max-width: 1170px) {
-      margin: 0 10px;
+      margin: 0;
     }
     @media only screen and (max-width: 600px) {
-      margin: 0 2px;
+      margin: 0;
     }
 
     .button-wrapper {
@@ -51,6 +51,7 @@
       margin-bottom: 30px;
       text-align: center;
       font-size: 1.4rem;
+      font-weight: bold;
 
       @media only screen and (max-width: 600px) {
         font-size: 1.2rem;
