--- a/src/page/search-page.scss
+++ b/src/page/search-page.scss
@@ -1,5 +1,9 @@
 .search-page {
+  margin: 0 auto;
+  width: 95%;
+
   @media (min-width: 992px) {
+    width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
 }
